# iar_one

./: .gitignore  README.md  iar_one.eww  meson.build  one.dep  one.ewd  one.ewp  one.ewt  stm32f407.build
Application/: main.c  project_config.h
Application/inc/: board.h  dac.h  motor.h  screen.h  task.h
Application/src/: board.c  dac.c  lcd.c  motor.c  screen.c
Libraries/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
settings/: iar_one.wsdt  one.Debug.cspy.bat  one.Debug.cspy.ps1  one.Debug.driver.xcl  one.Debug.general.xcl  one.dbgdt  one.dnx
